--- a/Ex3/Views/Display/display.cshtml
+++ b/Ex3/Views/Display/display.cshtml
@@ -5,24 +5,39 @@
 
 <head>
     <script src="~/Scripts/jquery-1.10.2.js"></script>
+    <style>
+        .dot {
+            height: 10px;
+            width: 10px;
+            background-color: red;
+            border-radius: 50%;
+            display: inline-block;
+            position: absolute;
+        }
+    </style>
 </head>
-<img src="~/Content/Images/export-map-share.png"
-     style="
+<div id="div">
+    <img src="~/Content/Images/export-map-share.png"
+         style="
     width: 100%;
     height: 100%;
 
     position: absolute;
-    
-    "/>
+
+    " id="mapImage" />
+</div>
+
 <p id="Latitude" style="
     position: absolute;"></p>
 <p id="Longitude" style="
     position: absolute;"></p>
 
-    
-@if (@ViewBag.time == null) {
+@if (ViewBag.isSavedSimulation == null)
+{
+    if (@ViewBag.time == null)
+    {
 
-    <script>
+        <script>
         addPlaneData = (function () {
         $.post("@Url.Action("GetPlaneData")").done(function (xml) {
             var xmlDoc = $.parseXML(xml),
@@ -30,15 +45,42 @@
             Latitude = $xml.find("Latitude").text();
             Longitude = $xml.find("Longitude").text();
 
-            $("#Latitude").text(Latitude);
-            $("#Longitude").text(Longitude);
+            Latitude *= 10;
+            LatitudeDiff = Latitude - parseInt(Latitude);
+            LatitudeDiff *= 1000;
+
+            Longitude *= 10;
+            LongitudeDiff = Longitude - parseInt(Longitude);
+            LongitudeDiff *= 100;
+
+            var dot = document.createElement("SPAN");
+            dot.className = "dot";
+            var img = document.getElementById("mapImage");
+            //var offset = img.offset;
+            var width = img.width;
+            var height = img.height;
+
+            var centerX = width / 2;
+            var centerY = height / 2;
+            var left = String(parseInt(centerX + LatitudeDiff)).concat("px");
+            var top = String(parseInt(centerY + LongitudeDiff)).concat("px");
+            alert(LatitudeDiff);
+            alert(LongitudeDiff);
+            dot.style.left = left;
+            dot.style.top = top;
+            dot.parentElement = document.getElementById("div");
+            document.body.appendChild(dot);
+            // $("#Latitude").text(Latitude);
+            // $("#Longitude").text(Longitude);
             })
         })
         addPlaneData();
-    </script>
+        </script>
 
-} else {
-    <script>
+    }
+    else
+    {
+        <script>
         addPlaneData = (function () {
         $.post("@Url.Action("GetPlaneData")").done(function (xml) {
             var xmlDoc = $.parseXML(xml),
@@ -46,8 +88,32 @@
             Latitude = $xml.find("Latitude").text();
             Longitude = $xml.find("Longitude").text();
 
-            $("#Latitude").text(Latitude);
-            $("#Longitude").text(Longitude);
+            Latitude *= 10;
+            LatitudeDiff = Latitude - parseInt(Latitude);
+            LatitudeDiff *= 1000;
+
+            Longitude *= 10;
+            LongitudeDiff = Longitude - parseInt(Longitude);
+            LongitudeDiff *= 100;
+
+            var dot = document.createElement("SPAN");
+            dot.className = "dot";
+            var img = document.getElementById("mapImage");
+            //var offset = img.offset;
+            var width = img.width;
+            var height = img.height;
+
+            var centerX = width / 2;
+            var centerY = height / 2;
+            var left = String(parseInt(centerX + LatitudeDiff)).concat("px");
+            var top = String(parseInt(centerY + LongitudeDiff)).concat("px");
+            alert(LatitudeDiff);
+            alert(LongitudeDiff);
+            dot.style.left = left;
+            dot.style.top = top;
+            document.body.appendChild(dot);
+            // $("#Latitude").text(Latitude);
+            // $("#Longitude").text(Longitude);
             })
         })
         var intervalTime = @ViewBag.time * 1000;
@@ -55,8 +121,79 @@
         setInterval(addPlaneData, intervalTime);
         addPlaneData();
 
-    </script>
+        </script>
 
+    }
+} else
+{
+    <script>
+        function normalize(value, min, max, newMin, newMax) {
+            return ((value - min) / (max - min)) * (newMax - newMin) + newMin;
+        }
+        function getPlaneData() {
+            var filename = {
+                filename: "@ViewBag.filename"
+            };
+            $.post("@Url.Action("GetFileSavedData")", filename).done(function (text) {
+                var lines = text.split("\r\n");
+                var i = 0;
+                var id = setInterval(getPlaneDataLine, (1.0 / @ViewBag.time) * 1000);
+                function getPlaneDataLine() {
+                    if (i >= lines.length) {
+                        clearInterval(id);
+                        alert("Simulation Has Finished.");
+                        return;
+                    }
+                    xml = lines[i];
+                    i++;
+                    var xmlDoc = $.parseXML(xml),
+                        $xml = $(xmlDoc)
+                    var Latitude = $xml.find("Latitude").text();
+                    var Longitude = $xml.find("Longitude").text();
+
+                    var data = "Latitude: " + String(Latitude) + " Longitude: " + String(Longitude);
+
+                    Latitude *= 10;
+                    LatitudeDiff = Latitude - parseInt(Latitude);
+                    LatitudeDiff *= 1000;
+
+                    LatitudeDiff /= 10;
+
+                    Longitude *= 10;
+                    LongitudeDiff = Longitude - parseInt(Longitude);
+                    LongitudeDiff *= 1000;
+
+                    LatitudeValue = normalize(LatitudeDiff, -100, 100, 0, 100);
+                    // alert(LongitudeDiff);
+                    LongitudeValue = normalize(LongitudeDiff, -1000, 1000, 0, 100);
+
+                    var dot = document.createElement("SPAN");
+                    dot.className = "dot";
+                    var img = document.getElementById("mapImage");
+                    //var offset = img.offset;
+                    var width = img.width;
+                    var height = img.height;
+
+                    var centerX = width / 2;
+                    var centerY = height / 2;
+                    var left = String(parseFloat(LatitudeValue)).concat("%");
+                    var top = String(parseFloat(LongitudeValue)).concat("%");
+                    // alert(LatitudeDiff);
+                    // alert(LongitudeDiff);
+                    dot.style.left = left;
+                    dot.style.top = top;
+                    document.body.appendChild(dot);
+                    // $("#Latitude").text(Latitude);
+                    // $("#Longitude").text(Longitude);
+                }
+            })
+        }
+        
+        
+        getPlaneData();
+    </script>
 }
+
+
 
 
