--- a/Ex3/Views/Save/save.cshtml
+++ b/Ex3/Views/Save/save.cshtml
@@ -3,12 +3,7 @@
     ViewBag.Title = "save";
 }
 
-<img src="~/Content/Images/export-map-share.png" style="
-    width: 100%;
-    height: 100%;
 
-    position: absolute;"
-     id="mapImage"/>
 
 <head>
     <style>
@@ -20,8 +15,33 @@
             display: inline-block;
             position: absolute;
         }
+
+        body, html {
+            height: 100%;
+            margin: 0;
+            padding: 0;
+            overflow: hidden;
+        }
+
+        #myCanvas {
+            top: 0;
+            left: 0;
+            position: absolute;
+            width: 100%;
+            height: 100%;
+        }
     </style>
     <script src="~/Scripts/jquery-1.10.2.js"></script>
+</head>
+
+<body id="body">
+    <img src="~/Content/Images/export-map-share.png" style="
+    width: 100%;
+    height: 100%;
+
+    position: absolute;"
+         id="mapImage" />
+    <canvas id="myCanvas"></canvas>
     <script>
         function normalize(value, min, max, newMin, newMax) {
             return ((value - min) / (max - min)) * (newMax - newMin) + newMin;
@@ -29,49 +49,105 @@
         function main() {
             var dataList = [1, 2, 3, 4];
             dataList.length = 0;
+            var shouldStop = false;
+            function normalize(value, min, max, newMin, newMax) {
+                return ((value - min) / (max - min)) * (newMax - newMin) + newMin;
+            }
+            var c = document.getElementById("myCanvas");
+            var ctx = c.getContext("2d");
+            ctx.canvas.width = $(body).width();
+            ctx.canvas.height = $(body).height();
+            var points = [1, 2, 3, 4];
+            points.length = 0;
             function addPlaneData() {
-            $.post("@Url.Action("GetPlaneData")").done(function (xml) {
-                var xmlDoc = $.parseXML(xml),
-                $xml = $(xmlDoc)
-                var Latitude = $xml.find("Latitude").text();
-                var Longitude = $xml.find("Longitude").text();
+                if (shouldStop) {
+                    return;
+                }
+                $.post("@Url.Action("GetPlaneData")").done(function (xml) {
+                    if (shouldStop) {
+                        return;
+                    }
+                    var xmlDoc = $.parseXML(xml),
+                        $xml = $(xmlDoc);
+                    var Latitude = $xml.find("Latitude").text();
+                    var Longitude = $xml.find("Longitude").text();
+                    var Throttle = $xml.find("Throttle").text();
+                    var Rudder = $xml.find("Throttle").text();
 
-                var data = "Latitude: " + String(Latitude) + " Longitude: " + String(Longitude);
-                dataList.push(data);
+                    Latitude = Math.floor(Math.random() * 180) - 90;
+                    Longitude = Math.floor(Math.random() * 361) - 180;
 
-                Latitude *= 10;
-                LatitudeDiff = Latitude - parseInt(Latitude);
-                LatitudeDiff *= 1000;
+                    var ctx = c.getContext("2d");
+                    ctx.clearRect(0, 0, c.width, c.height);
+                    //var Latitude = 90;
+                    //var Longitude = 180;
 
-                LatitudeDiff /= 10;
+                    //var data = "Latitude: " + String(Latitude) + " Longitude: " + String(Longitude) + " Throttle: " + String(Throttle) + " Rudder: " + String(Rudder);
+                    var data = { Latitude: Latitude, Longitude: Longitude, Throttle: Throttle, Rudder: Rudder };
+                    dataList.push(data);
 
-                Longitude *= 10;
-                LongitudeDiff = Longitude - parseInt(Longitude);
-                LongitudeDiff *= 1000;
+                    /*Latitude *= 10;
+                    LatitudeDiff = Latitude - parseInt(Latitude);
+                    LatitudeDiff *= 1000;
 
-                LatitudeValue = normalize(LatitudeDiff, -100, 100, 0, 100);
-                // alert(LongitudeDiff);
-                LongitudeValue = normalize(LongitudeDiff, -1000, 1000, 0, 100);
+                    LatitudeDiff /= 10;
 
-                var dot = document.createElement("SPAN");
-                dot.className = "dot";
-                var img = document.getElementById("mapImage");
-                //var offset = img.offset;
-                var width = img.width;
-                var height = img.height;
+                    Longitude *= 10;
+                    LongitudeDiff = Longitude - parseInt(Longitude);
+                    LongitudeDiff *= 1000;*/
 
-                var centerX = width / 2;
-                var centerY = height / 2;
-                var left = String(parseFloat(LatitudeValue)).concat("%");
-                var top = String(parseFloat(LongitudeValue)).concat("%");
-                // alert(LatitudeDiff);
-                // alert(LongitudeDiff);
-                dot.style.left = left;
-                dot.style.top = top;
-                document.body.appendChild(dot);
-                // $("#Latitude").text(Latitude);
-                // $("#Longitude").text(Longitude);
-                })
+                    LatitudeValue = normalize(Latitude, -90, 90, 0, ctx.canvas.height);
+                    // alert(LongitudeDiff);
+                    LongitudeValue = normalize(Longitude, -180, 180, 0, ctx.canvas.width);
+
+                    //var dot = document.createElement("SPAN");
+                    //dot.className = "dot";
+                    // var img = document.getElementById("mapImage");
+                    //var offset = img.offset;
+                    //var width = ctx.canvas.width;
+                    //var height = ctx.canvas.height;
+
+                    // var centerX = width / 2;
+                    // var centerY = height / 2;
+                    //var left = String(parseFloat(LatitudeValue) * 100 / width);
+                    //var top = String(parseFloat(LongitudeValue) * 100 / height);
+
+                    var left = LongitudeValue;
+                    var top = LatitudeValue;
+
+                    points.push({ x: left, y: top });
+
+                    for (var i = 0; i < points.length - 1; i++) {
+                        var firstPoint = points[i];
+                        var nextPoint = points[i + 1];
+                        ctx.beginPath();
+                        ctx.moveTo(firstPoint.x, firstPoint.y);
+                        ctx.lineTo(nextPoint.x, nextPoint.y);
+                        ctx.fillStyle = "red";
+                        ctx.stroke();
+                    }
+
+                    ctx.beginPath();
+                    ctx.moveTo(points[points.length - 1].x, points[points.length - 1].y);
+                    ctx.lineTo(left, top);
+                    ctx.fillStyle = "red";
+                    ctx.stroke();
+
+
+                    // var img = document.getElementById("mapImage");
+
+                    ctx.beginPath();
+                    ctx.arc(left, top, 5, 0, 2 * Math.PI);
+                    ctx.fillStyle = "red";
+                    ctx.fill();
+                    // alert(LatitudeDiff);
+                    // alert(LongitudeDiff);
+                    // dot.style.left = left;
+                    // dot.style.top = top;
+                    // document.body.appendChild(dot);
+                    // $("#Latitude").text(Latitude);
+                    // $("#Longitude").text(Longitude);
+                    })
             }
             var intervalTime = (1.0 / @ViewBag.time) * 1000;
 
@@ -79,16 +155,25 @@
             addPlaneData(dataList);
             setTimeout(function() {
                 clearInterval(id);
-                $.post("@Url.Action("SaveInFile")");
+                shouldStop = true;
+                alert(dataList);
+                var data = { filename: "@ViewBag.filename", data: JSON.stringify(dataList) };
+                //var input = { filename: "@ViewBag.filename", data: data };
+                $.post("@Url.Action("SaveInFile")", data);
             }, @ViewBag.timer * 1000);
 
         }
 
-        main();
+        window.onload = main();
+
+        /*$(body).resize = function () {
+            ctx.canvas.width = $(body).width;
+            ctx.canvas.height = $(body).height;
+        }*/
 
 
     </script>
-</head>
+</body>
 
 
 
